--- a/systemd/etc/systemd/system/docker-dmm7510@.service
+++ b/systemd/etc/systemd/system/docker-dmm7510@.service
@@ -8,7 +8,7 @@ Restart=always
 RestartSec=2
 EnvironmentFile=/etc/sysconfig/docker-dmm7510-epics-ioc
 EnvironmentFile=/etc/sysconfig/docker-dmm7510-epics-ioc-mapping
-Environment=IMAGE_VERSION=2.0.2-base-3.15-debian-9
+Environment=IMAGE_VERSION=3.0.0-rc1-base-3.15-debian-9
 # Used inside runDockerDMM7510 script
 Environment=DMM7510_INSTANCE=%i
 ExecStartPre=-/usr/bin/docker pull lnlsdig/dmm7510-epics-ioc:${IMAGE_VERSION}
